--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
   "dependencies": {
     "await-to-js": "3.0.0",
     "axios": "0.21.1",
-    "bootstrap": "^5.2.2",
     "mobx": "^5.15.7",
     "node-sass": "^8.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-popup-alert": "^2.0.0",
     "sass": "^1.54.1"
   },
   "devDependencies": {
