--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/global-npm": "^0.4.1",
     "await-to-js": "3.0.0",
     "axios": "0.21.1",
     "mobx": "^5.15.7",
     "node-sass": "^8.0.0",
-    "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-popup-alert": "^2.0.0",
     "sass": "^1.54.1"
